--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 
   <!-- FAVICONS -->
-  <link rel="icon" href="images/favicons/favicon.ico">
+  <link rel="icon" href="images/wbtlogo.png">
   <link rel="apple-touch-icon" href="images/favicons/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png">
