--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 
         <!-- INTRO TEXT -->
         <div class="intro-text width-70 margin-auto typo-light" data-ckav-smd="width-100 align-center">
-          <h2 class="heading xlarge bold-800" data-ckav-smd="large">Merry Christmas</h2>
+          <h2 class="heading xlarge bold-800" data-ckav-smd="large">Happy New Year</h2>
           <p class="heading-sub small bold-400 margin-b-0" data-ckav-smd="mini margin-b-40">World Brain Technology uses
-            this medium to wish you a happy Christmas and a wonderful new year in advance!</p>
+            this medium to wish you a happy new year and an excellent future!</p>
 
           <!-- <button class="btn btn-warning mt-3 shadow">Redeem Gift</button> -->
           <a href="#redeem" data-page-type="inner-page" class="btn btn-warning mt-3 shadow navigation-a">Redeem Gift</a>
