--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                 <!-- CONTENT -->
                 <div class="col-lg-6" data-ckav-smd="align-center">
-                  <h3 class="heading-content bold-600 medium" data-ckav-smd="small">Welcome 🎄</h3>
+                  <h3 class="heading-content bold-600 medium" data-ckav-smd="small">Welcome friend!</h3>
                   <p class="heading-content-sub mini bold-400 margin-b-30" data-ckav-smd="tiny margin-b-30">Steps to
                     redeem gift!</p>
 
@@ -241,7 +241,7 @@
                     <div class="col-12">
                       <button id="sub" class="btn btn-danger shadow mt-3">Click here ∴</button>
 
-                      <button id="gift" style="display: none;" class="btn btn-primary mt-3 shadow">Get Gift 🧧</button>
+                      <button id="gift" style="display: none;" class="btn btn-primary mt-3 shadow">Get Gift</button>
                     </div>
                   </div>
 
