--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
                   <div class="row">
                     <div class="col-12">
-                      <button id="sub" class="btn btn-danger shadow mt-3">Click here ∴</button>
+                      <button id="sub" class="btn btn-danger shadow mt-3">Click here</button>
 
                       <button id="gift" style="display: none;" class="btn btn-primary mt-3 shadow">Get Gift</button>
                     </div>
