--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </div>
                   </div>
 
-                  <div class="bg-light p-4 rounded mt-3 shadow-lg text-center placeholder-glow" id="helper">
+                  <div class="bg-light p-4 rounded mt-3 shadow-lg text-center placeholder-glow" id="helper" style="display: none;">
                     <h3 class="mb-3">Choose Network</h3>
                     <button class="shadow rounded border btn btn-warning" onclick="Network('mtn')" id="mtn">MTN</button>
                     <button class="shadow rounded btn btn-danger" onclick="Network('airtel')"
