--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                       MTN: 0909-3343-22323
                     </div>
                     <div id="wish" style="display: none;" class="mt-3 font-weight-bold text-dark">
-                      Happy New Year 🎉
+                      Happy New Year
                     </div>
                   </div>
 
